# ha-hisense-remote

./: .gitignore  .mise.toml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  package-lock.json  package.json  pyproject.toml  release-please-config.json  requirements-dev.txt
.github/: CODEOWNERS
.github/rulesets/: main.json
.github/workflows/: automerge-release.yml  ci.yml  release.yml
custom_components/hisense_vidaa/: __init__.py  apps.py  client.py  config_flow.py  const.py  coordinator.py  entity.py  keys.py  manifest.json  media_player.py  remote.py  services.yaml  strings.json
examples/: bubble-card-remote.yaml  custom-dashboard-remote.yaml  universal-remote-card.yaml
examples/bubble-card/: popup.yaml  slider.yaml
scripts/: set_version.py
tests/: __init__.py  test_apps.py  test_keys.py  test_remote.py
