[project]
name = "ha-hisense-remote"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "vidaa-control==1.1.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
